feat: allow get current user from private route
